test/FAIL/loadcmd/invalid_name/01_test_load.emu
#-------
#TEST_RETURN_CODE=FAIL           
#TEST_COMMENT="wrong arguments("nom"=nom_fichier) and to few arguments"
#-------

load

